--- a/PuraVida/css/main.css
+++ b/PuraVida/css/main.css
@@ -73,7 +73,7 @@ body {
 
 .text-one {
     position: absolute;
-    margin-top: -35rem;
+    margin-top: -38rem;
     color: #c94c90;
     font-family: MV Boli;
     text-shadow: 2px 1px#ffff;
@@ -100,7 +100,7 @@ a:hover {
 
 .text-two {
     position: absolute;
-    margin-top: -30rem;
+    margin-top: -34rem;
     color: #ffffff;
     font-family: sans-serif;
     text-shadow: 3px 1px#474747;
@@ -191,8 +191,8 @@ a:hover {
 }
 
 .slider-menu {
-    margin-top: -24rem;
-    margin-bottom: 12rem;
+    margin-top: -28rem;
+    margin-bottom: 13rem;
 }
  
 @-webkit-keyframes scroll {
@@ -214,11 +214,11 @@ a:hover {
 }
 .slider {
     background: white;
-    height: 15rem;
+    height: 17rem;
     margin: auto;
     overflow: hidden;
     position: relative;
-    width: 1000px;
+    width: 1015px;
     border-radius: 1rem !important;
     box-shadow: 0px 25px 70px rgb(11 0 0 / 70%) !important;
 }
@@ -400,8 +400,8 @@ footer p{
 
 .banner-container {
     width: 80vw;
-    height: 85vh;
-    background-color: #ece4e4;
+    height: 78vh;
+    background-color: #f3f3f3;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -425,7 +425,7 @@ footer p{
 
 .banner-black{
     background-color: #000000;
-    min-height: 90vh;
+    min-height: 74vh;
     min-width: 100vw;
     display: flex;
     align-content: center;
