--- a/PuraVida/css/main.css
+++ b/PuraVida/css/main.css
@@ -53,6 +53,9 @@ body {
     justify-content: center; 
     padding-bottom: 300px; 
 }
+.texto-inscribite {
+    font-size: 2rem !important;
+}
 
 .mapa {
     width:100%;
@@ -75,11 +78,12 @@ body {
     position: absolute;
     margin-top: -38rem;
     color: #c94c90;
-    font-family: MV Boli;
     text-shadow: 2px 1px#ffff;
     font-weight: bold;
     letter-spacing: 5px;
+    font-size: 3rem !important;
 }
+
 
 .img-card {
     box-shadow: 0 9px 16px rgb(0 0 0 / 20%) !important;
@@ -101,11 +105,11 @@ a:hover {
 .text-two {
     position: absolute;
     margin-top: -34rem;
-    color: #ffffff;
-    font-family: sans-serif;
-    text-shadow: 3px 1px#474747;
+    color: #000000;
+    font-family: fantasy;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 7px;
+    font-size: 4rem;
 }
 
 .text-body {
@@ -116,7 +120,8 @@ a:hover {
 .text-secondary {
     color: #6c757d!important;
     font-size: 1.25rem !important;
-    font-family: cursive;;
+    font-family: cursive;
+    padding-inline: 2vw;
 }
 
 .text-body-banner {
@@ -312,7 +317,9 @@ a:hover {
     color: #3f3f3f;
 }
 
-
+.text-primary {
+    color: #eb4893!important;
+}
 
 
 /*=========================FOOTER================================*/
@@ -320,7 +327,7 @@ a:hover {
 footer {
     background: #e84a94;
     min-height: 100px;
-    width: 100vw;
+    width: 101vw;
     color: #ffffff;
 }
 footer p{
@@ -380,11 +387,10 @@ footer p{
 }
 
 .cards-title{
-    color: #000000;
-    font-family: sans-serif;
-    text-shadow: 3px 1px#ffffff;
+    font-size: 2rem;
+    font-family: cursive;
+    color: #7a7a7a !important;
     font-weight: bold;
-    letter-spacing: 2px;
 }
 
 .banner-pink{
@@ -421,6 +427,17 @@ footer p{
     width: 70%;
     max-height: 40%;
     max-width: 70%;
+}
+
+.text-contact {
+    margin-top: -3vh;
+    font-size: 2rem;
+    font-family: cursive;
+    color: #7a7a7a !important
+}
+
+.border-primary {
+    border-color: #ca4c90!important;
 }
 
 .banner-black{
@@ -481,6 +498,7 @@ h5 {
     #local {
         flex-wrap: wrap;
         padding-top:30px;
+        overflow: hidden
    }
    .wrapper-local {
     width: 75%;
