--- a/PuraVida/css/main.css
+++ b/PuraVida/css/main.css
@@ -29,6 +29,11 @@ body {
     max-height:39rem !important;
 }
 
+.carrousel-container{
+    height: 80vh;
+    width: 80vw;
+}
+
 #img-equipo{
     max-height:30rem !important;
     width:50%;
