--- a/PuraVida/css/main.css
+++ b/PuraVida/css/main.css
@@ -34,6 +34,46 @@ body {
     width: 80vw;
 }
 
+.carousel-text {
+    background-color: #f3f3f3;
+}
+
+.car-text{
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-a-us {
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2em;
+}
+
+.title-a-us{
+    color: #ca4c90;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 2%;
+}
+
+.about-us{
+    border-radius: 2%;
+    width: 60vw;
+    background-color: #f3f3f3;
+    padding: 2%;
+    max-height: 50vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-attachment: scroll;
+}
+
 #img-equipo{
     max-height:30rem !important;
     width:50%;
