--- a/PuraVida/css/main.css
+++ b/PuraVida/css/main.css
@@ -474,6 +474,13 @@ footer p{
     max-width: 70%;
 }
 
+.carousel-cards {
+    background-color: #ffffff;
+    border-radius: 2%;
+    max-width: 33vw;
+    display: none;
+}
+
 .text-contact {
     margin-top: -3vh;
     font-size: 2rem;
@@ -532,6 +539,15 @@ h5 {
     font-weight: bold;
     letter-spacing: 3px;
 }
+
+.item-container{
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 /*=========================MEDIA QUERIES PANTALLA ANCHA================================*/
 
 @media (max-width:1200px){
@@ -583,6 +599,30 @@ h5 {
         top: -120px;
     }
 
+    .cards-section{
+        display: none;
+    }
+    
+    .carousel-cards {
+        background-color: #ffffff;
+        border-radius: 2%;
+        display: inline;
+        min-width: 33vw;
+    }
+
+    .banner-container {
+        height: 40vh;
+        top: 20%;
+        text-align: center;
+    }
+
+    .banner-black {
+        min-height: 50vh;
+    }
+
+    .banner-pink {
+        min-height: 25vh;
+    }
 
 }
 /*=========================MEDIA QUERIES PANTALLA EXTRA-SM================================*/
