--- a/PuraVida/css/main.css
+++ b/PuraVida/css/main.css
@@ -56,9 +56,12 @@ body {
     margin: 2em;
 }
 
+
 .title-a-us{
     color: #ca4c90;
-    font-size: 2rem;
+    font-weight: bold;
+    letter-spacing: 5px;
+    font-size: 3rem !important;
     font-weight: bold;
     margin-bottom: 2%;
 }
@@ -268,7 +271,7 @@ a:hover {
     margin: auto;
     overflow: hidden;
     position: relative;
-    width: 1015px;
+    width: 90%;
     border-radius: 1rem !important;
     box-shadow: 0px 25px 70px rgb(11 0 0 / 70%) !important;
 }
@@ -582,7 +585,27 @@ h5 {
     #bg-contactos{
         top: -120px;
     }
-
+    .slider-menu {
+        margin-top: -5rem;
+        margin-bottom: 2rem;
+    }
+    .slider {
+        height: 10rem;
+    }
+    .text-two {
+        margin-top: -13rem;
+        color: #ffffff;
+        font-size: 3rem;
+        text-align: center;
+    }
+    .text-one {
+        margin-top: -17rem;
+    }
+    .navbar-light .navbar-toggler {
+        color: rgb(255 255 255);
+        border-color: rgb(255 255 255);
+        background: white;
+    }
 
 }
 /*=========================MEDIA QUERIES PANTALLA EXTRA-SM================================*/
